project2/kubernetes/pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-demo
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: back-end
          image: 163853439795.dkr.ecr.us-east-1.amazonaws.com/webapp:latest
          ports:
            - containerPort: 80
