project2/kubernetes/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-python
  namespace : kube-public
spec:
  selector:
    matchLabels:
      app: proxy-python
  replicas: 2
  template:
    metadata:
      labels:
        app: proxy-python
    spec:
      containers:
      - name: proxy-python
        image: 163853439795.dkr.ecr.us-east-1.amazonaws.com/proxy_image:latest  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-python
  namespace: kube-public
spec:
  type: NodePort
  selector:
    app: proxy-python
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30002
