project2/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuln-python
  namespace : kube-public
spec:
  selector:
    matchLabels:
      app: vuln-python
  replicas: 2
  template:
    metadata:
      labels:
        app: vuln-python
    spec:
      containers:
      - name: vuln-python
        image: 163853439795.dkr.ecr.us-east-1.amazonaws.com/vuln_image:latest  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: vuln-python
  namespace: kube-public
spec:
  type: NodePort
  selector:
    app: vuln-python
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30001
